--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = "1.0.98"
 dotenvy = "0.15.7"
 lettre = { version = "0.11.17", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-native-tls"] }
 tokio = { version = "1.45.1", features = ["full"] }
+polars = { version = "0.39", features = ["csv", "lazy", "temporal"] }
