--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ dotenvy = "0.15.7"
 lettre = { version = "0.11.17", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-native-tls"] }
 tokio = { version = "1.45.1", features = ["full"] }
 polars = { version = "0.39", features = ["csv", "lazy", "temporal",  "strings"] }
+colored = "3.0.0"
